tests/harness/errors/131_snake_case_upper_hint.eu
# Mistake: using snake_case str.to_upper (underscore) — eucalypt uses kebab-case str.to-upper
text: "hello"
result: text str.to_upper
